# autoharness

./: .gitignore  README.md  pyproject.toml
contrib/agents/: README.md
docs/: ONBOARDING.md  design.md  implementation-plan.md  quickstart.md  second-pass-plan.md  usage.md
src/autoharness/: __init__.py  autonomy.py  benchmark_handlers.py  benchmarks.py  campaign_handlers.py  campaign_runs.py  campaigns.py  cli.py  cli_arguments.py  cli_parser.py  cli_registration.py  cli_registration_benchmarks.py  cli_registration_campaigns.py  cli_registration_doctor.py  cli_registration_execution.py  cli_registration_guide.py  cli_registration_inspection.py  cli_registration_listings.py  cli_registration_promotion.py  cli_registration_proposals.py  cli_registration_workspace.py  cli_support.py  coordination.py  detail_handlers.py  doctor_handlers.py  editing.py  events.py  guide_assistant.py  (+30 more)
tests/: test_adapters.py  test_autonomy.py  test_benchmarks.py  test_benchmarks_cli.py  test_campaigns.py  test_car_bench_adapter.py  test_cli_parser.py  test_cli_registration.py  test_doctor_cli.py  test_editing.py  test_execution_handlers.py  test_generators.py  test_generic_command_adapter.py  test_guide_cli.py  test_harbor_adapter.py  test_iteration_cli.py  test_listings.py  test_mutations.py  test_outputs.py  test_preflight.py  test_proposals_cli.py  test_pytest_adapter.py  test_queries.py  test_run_benchmark_cli.py  test_search.py  test_setup_cli.py  test_stages.py  test_staging.py  test_stats.py  test_tau2_hal_adapters.py  test_tracking.py  test_validation.py  test_workspace_handlers.py
(+22 files in other folders)
